[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/itens/01/01.svg" type="Texture" id=1]
[ext_resource path="res://scripts/Item.gd" type="Script" id=2]
[ext_resource path="res://assets/particles/shiny.svg" type="Texture" id=3]

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="Gradient" id=14]
offsets = PoolRealArray( 0, 0.128205, 0.17094, 0.282051, 0.512821, 0.589744, 0.666667, 0.957265, 1 )
colors = PoolColorArray( 0, 0.447059, 1, 0, 1, 1, 1, 0.186606, 1, 1, 1, 1, 1, 1, 1, 0.22053, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0.0156863, 1, 1, 1, 0.501961 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 14 )
width = 4

[sub_resource type="Curve" id=21]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.00681818 ), -7.10605, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=22]
curve = SubResource( 21 )

[sub_resource type="ParticlesMaterial" id=20]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 300.0
orbit_velocity = 0.5
orbit_velocity_random = 0.0
damping = 1000.0
angle = 720.0
angle_random = 1.0
scale = 4.0
scale_curve = SubResource( 22 )
color_ramp = SubResource( 5 )

[sub_resource type="Gradient" id=13]
offsets = PoolRealArray( 0, 0.533835, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.737255, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 13 )
width = 1

[sub_resource type="CircleShape2D" id=1]
radius = 30.0

[sub_resource type="Curve" id=15]
max_value = 4.0
_data = [ Vector2( 0, 4 ), 0.0, -11.3182, 0, 0, Vector2( 1, 0 ), 0.0053033, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=16]
curve = SubResource( 15 )

[sub_resource type="ParticlesMaterial" id=17]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 128.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 16.0
scale = 4.0
scale_curve = SubResource( 16 )
color_ramp = SubResource( 5 )

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0, 0.466165, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 0.464428, 0.43656, 0, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )
width = 4

[sub_resource type="CanvasItemMaterial" id=23]
blend_mode = 1
light_mode = 2

[sub_resource type="Gradient" id=24]
offsets = PoolRealArray( 0, 0.538462, 1 )
colors = PoolColorArray( 1, 1, 1, 0.501961, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=25]
gradient = SubResource( 24 )

[sub_resource type="Curve" id=26]
_data = [ Vector2( 0, 0 ), 0.0, 7.21212, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=27]
curve = SubResource( 26 )

[sub_resource type="ParticlesMaterial" id=28]
emission_shape = 1
emission_sphere_radius = 35.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 0, -49, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 20.0
scale = 0.1
scale_curve = SubResource( 27 )
color_ramp = SubResource( 25 )

[node name="Item" type="Area2D"]
script = ExtResource( 2 )

[node name="CanMergeParticles" type="Particles2D" parent="."]
visible = false
material = SubResource( 3 )
amount = 1024
lifetime = 0.2
visibility_rect = Rect2( 0, 0, 0, 0 )
local_coords = false
process_material = SubResource( 20 )
texture = SubResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
one_way_collision_margin = 0.0

[node name="svg" type="Sprite" parent="."]
position = Vector2( -35, -35 )
scale = Vector2( 0.11, 0.11 )
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_editor_description_": "640 X 640"
}

[node name="Tween_node" type="Tween" parent="."]

[node name="MergingParticles" type="Particles2D" parent="."]
visible = false
material = SubResource( 3 )
amount = 512
explosiveness = 1.0
visibility_rect = Rect2( 0, 0, 0, 0 )
local_coords = false
process_material = SubResource( 17 )
texture = SubResource( 11 )

[node name="GeneratorParticles" type="Particles2D" parent="."]
material = SubResource( 23 )
amount = 5
lifetime = 2.0
visibility_rect = Rect2( 0, 0, 0, 0 )
local_coords = false
process_material = SubResource( 28 )
texture = ExtResource( 3 )
